fixed horizontal scroll issue

--- a/fullCoast/css/style.css
+++ b/fullCoast/css/style.css
@@ -518,11 +518,11 @@ html, body {
 
 
 .pullOutPage {
-	position: absolute;
+	/*position: absolute;*/
 	overflow-x: hidden;
-	top: 0;
+	/*top: 0;*/
 	background: #FBFCFC;
-	height: 100%;
+	/*height: 100%;*/
 	padding-left: 25px;
 	padding-right: 25px;
 	-webkit-transition: .2s right;
@@ -531,11 +531,22 @@ html, body {
 	transition: .2s right;
 }
 
-
-#searchPage {
+#searchPageWrapper {
+	position: relative;
 	width: 350px;
-	right: -610px;
+	height: 100vh;
+	right: -100%;
 	z-index: 1001;
+	margin-top: -100vh;
+}
+#searchPage {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	right: 0;
+	/*width: 350px;*/
+	/*right: -610px;*/
+	/*z-index: 1001;*/
 	/*overflow-y: scroll;*/
 }
 
@@ -567,10 +578,22 @@ html, body {
 	color: black;
 }
 
-#basemapPage {
+#basemapPageWrapper {
+	position: relative;
 	width: 350px;
-	right: -610px;
+	height: 100vh;
+	right: -100%;
 	z-index: 1001;
+	margin-top: -100vh;
+}
+#basemapPage {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	right: 0;
+	/*width: 350px;
+	right: -610px;
+	z-index: 1001;*/
 	/*overflow-y: scroll;*/
 }
 
@@ -592,11 +615,24 @@ html, body {
 }
 
 
-
+#filterPageWrapper {
+	position: relative;
+	width: 350px;
+	height: 100vh;
+	right: -100%;
+	z-index: 1001;
+	margin-top: -100vh;
+}
 #filterPage {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	right: 0;
+	/*
 	width: 350px;
 	right: -610px;
 	z-index: 1001;
+	*/
 }
 
 .myFilterButtons {
@@ -621,10 +657,22 @@ html, body {
 }
 
 
-#featurePage {
+#featurePageWrapper {
+	position: relative;
 	width: 350px;
-	right: -610px;
+	height: 100vh;
+	right: -100%;
 	z-index: 1002;
+	margin-top: -100vh;
+}
+#featurePage {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	right: 0;
+	/*width: 350px;
+	right: -610px;
+	z-index: 1002;*/
 	/*overflow-y:scroll;*/
 	text-align: center;
 }
@@ -635,18 +683,44 @@ html, body {
 	cursor: pointer;
 }
 
-#hoverFeaturePage {
+#hoverFeaturePageWrapper {
+	position: relative;
 	width: 350px;
-	right: -610px;
+	height: 100vh;
+	right: -100%;
 	z-index: 1002;
+	margin-top: -100vh;
+}
+#hoverFeaturePage {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	right: 0;
+	/*width: 350px;*/
+	/*right: -610px;*/
+	/*z-index: 1002;*/
 	/*overflow-y: scroll;*/
 	text-align: center;
 }
 
+#infoPageWrapper {
+	position: relative;
+	width: 350px;
+	height: 100vh;
+	right: -100%;
+	z-index: 1001;
+	margin-top: -100vh;
+}
 #infoPage {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	right: 0;
+	/*
 	width: 350px;
 	right: -610px;
 	z-index: 1001;
+	*/
 }
 
 .active {
